--- a/.github/workflows/master.yml
+++ b/.github/workflows/master.yml
@@ -1,32 +1,31 @@
-name: Build and Deploy
+name: Upload Website to master
 
 on:
   push:
-    branches:
-      - master # Change this to the branch you want to deploy from
+    branches: [master]
 
 jobs:
-  build:
+  Deploy:
     runs-on: ubuntu-latest
-
     steps:
-      - name: Checkout code
+      - name: Checkout
         uses: actions/checkout@v2
 
-      - name: Setup Node.js
+      - name: Setup node
         uses: actions/setup-node@v2
-        with:
-          node-version: 18 # You can specify your Node.js version
 
       - name: Install dependencies
-        run: npm ci
+        run: npm install
 
-      - name: Build
-        run: npm run build # Adjust this if your build command is different
+      - name: Build static file
+        run: npm run build
 
-      - name: Deploy to GitHub Pages
-        run: |
-          git config user.name ${{ github.actor }}
-          git config user.email ${{ github.actor }}@users.noreply.github.com
-          git remote add gh-pages https://${{ secrets.GITHUB_TOKEN }}@github.com/${{ github.repository }}
-          git subtree push --prefix build gh-pages master
+      - name: Configure AWS Credentials
+        uses: aws-actions/configure-aws-credentials@v1
+        with:
+          aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
+          aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+          aws-region: eu-west-2
+
+      - name: Deploy static site to S3 bucket
+        run: aws s3 sync ./build s3://portfolio-davidm-s3
